@@ -1,17 +1,19 @@
-package task7_11_1;
+package task7_11_2;
+
+//import task7_11_1.Products2;
 
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 
-public class Task7_11_1 {
+public class Task7_11_2 {
     public static void main(String[] args) throws Exception {
         System.out.println("""
                 Задание:\s
                 Модуль 7. Взаимодействие с API. Задание №11. Проект:\s
-                    1. Реализовать в  проекте пагинацию для того, чтобы каждая категория товара была в соответствующем
-                       каталоге (реализуйте не менее 3-х категорий).\s
+                    2. Реализовать сортировку товаров по цене,  фильтрацию относительно доступности товара в текущий
+                       момент для заказа.\s
 
                 Решение:\s""");
 
@@ -33,27 +35,27 @@ public class Task7_11_1 {
         System.out.println("\nСписок: КОЛ-ВО В НАЛИЧИИ НА СКЛАДЕ: ");
         catalog.stream().map((product -> product.getQtyInStock())).forEach(System.out::println);
 
-//        // Объявляем список: Кол-во заказано
-//        System.out.println("\nСписок: КОЛ-ВО ЗАКАЗАНО: ");
-//        catalog.stream().map((product -> product.getQtyOrdered())).forEach(System.out::println);
-//
-//        // Сортируем по цене
-//        System.out.println("\nСОРТИРУЕМ КАТАЛОГ ПО ЦЕНЕ:");
-////        catalog.stream().sorted(Comparator.comparing(Products2::getPrice)).collect(Collectors.toList())
-//        catalog.stream().sorted(Comparator.comparing(Products2::getPrice)).toList()
-//                .forEach(System.out::println);
-////                System.out.println();
-//
-//        // Фильтруем относительно доступности товара в текущий момент для заказа
-//        System.out.println("\nФИЛЬТРУЕМ ОТНОСИТЕЛЬНО ДОСТУПНОСТИ ТОВАРА ДЛЯ ЗАКАЗА: \n(исключаем позицию, которая на складе отсутствует)");
-//        catalog.stream()
-////                        .sorted(Comparator.comparing(Products2::getPrice)).toList()
-//                .filter(p -> p.getQtyInStock() != 0/*, qtyInStock*/)
-////                        .forEach(System.out::println);
-//                .forEach(p -> System.out.printf("Наименование: %s, Цена: %d, Кол-во на складе: %d.%n",
-//                        p.getName(), p.getPrice(), p.getQtyInStock())
-//                );
-//
+        // Объявляем список: Кол-во заказано
+        System.out.println("\nСписок: КОЛ-ВО ЗАКАЗАНО: ");
+        catalog.stream().map((product -> product.getQtyOrdered())).forEach(System.out::println);
+
+        // Сортируем по цене
+        System.out.println("\nСОРТИРУЕМ КАТАЛОГ ПО ЦЕНЕ (по возрастанию):");
+//        catalog.stream().sorted(Comparator.comparing(Products2::getPrice)).collect(Collectors.toList())
+        catalog.stream().sorted(Comparator.comparing(Products2::getPrice)).toList()
+                .forEach(System.out::println);
+//                System.out.println();
+
+        // Фильтруем относительно доступности товара в текущий момент для заказа
+        System.out.println("\nФИЛЬТРУЕМ ОТНОСИТЕЛЬНО ДОСТУПНОСТИ ТОВАРА ДЛЯ ЗАКАЗА: \n(исключаем позицию, которая на складе отсутствует)");
+        catalog.stream()
+//                        .sorted(Comparator.comparing(Products2::getPrice)).toList()
+                .filter(p -> p.getQtyInStock() != 0/*, qtyInStock*/)
+//                        .forEach(System.out::println);
+                .forEach(p -> System.out.printf("Наименование: %s, Цена: %d, Кол-во на складе: %d.%n",
+                        p.getName(), p.getPrice(), p.getQtyInStock())
+                );
+
 //        System.out.println("\nРЕАЛИЗУЕМ НАВИГАЦИОННОЕ МЕНЮ, СОСТОЯЩЕЕ ИЗ РАЗДЕЛОВ:");
 //        System.out.println("ПОЛНЫЙ КАТАЛОГ:");
 //        catalog.forEach(p -> System.out.printf("Наименование: %s, Цена: %d, Кол-во на складе: %d.%n",
@@ -101,19 +103,19 @@ public class Task7_11_1 {
     }
 }
 
+
 class Products2 {
     private String name;
     private int price;
     private int qtyInStock;
     private int qtyOrdered;
 
-
-    public Products2(String name, int price, int qtyInStock, int qtyOrdered) {
-        this.setName(name);
-        this.setPrice(price);
-        this.setQtyInStock(qtyInStock);
-        this.setQtyOrdered(qtyOrdered);
-    }
+public Products2(String name, int price, int qtyInStock, int qtyOrdered) {
+    this.setName(name);
+    this.setPrice(price);
+    this.setQtyInStock(qtyInStock);
+    this.setQtyOrdered(qtyOrdered);
+}
 
 //    @Override
 //    public String toString() {
@@ -123,51 +125,52 @@ class Products2 {
 //                ", Кол-во заказано: " + getQtyOrdered();
 //    }
 
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public int getPrice() {
-        return price;
-    }
-
-    public void setPrice(int price) {
-        this.price = price;
-    }
-
-    public int getQtyInStock() {
-        return qtyInStock;
-    }
-
-    public void setQtyInStock(int qtyInStock) {
-        this.qtyInStock = qtyInStock;
-    }
-
-    public int getQtyOrdered() {
-        return qtyOrdered;
-    }
-
-    public void setQtyOrdered(int qtyOrdered) {
-        this.qtyOrdered = qtyOrdered;
-    }
-
-    @Override
-    public String toString() {
-        return "Products2{" +
-                "name='" + name + '\'' +
-                ", price=" + price +
-                ", qtyInStock=" + qtyInStock +
-                ", qtyOrdered=" + qtyOrdered +
-                '}';
-    }
-
-    // class Products2
-    public void sell() {
-        this.qtyInStock -= this.qtyOrdered;
-        this.qtyOrdered = 0;
-    }
+public String getName() {
+    return name;
 }
+
+public void setName(String name) {
+    this.name = name;
+}
+
+public int getPrice() {
+    return price;
+}
+
+public void setPrice(int price) {
+    this.price = price;
+}
+
+public int getQtyInStock() {
+    return qtyInStock;
+}
+
+public void setQtyInStock(int qtyInStock) {
+    this.qtyInStock = qtyInStock;
+}
+
+public int getQtyOrdered() {
+    return qtyOrdered;
+}
+
+public void setQtyOrdered(int qtyOrdered) {
+    this.qtyOrdered = qtyOrdered;
+}
+
+@Override
+public String toString() {
+    return "Products2{" +
+            "name='" + name + '\'' +
+            ", price=" + price +
+            ", qtyInStock=" + qtyInStock +
+            ", qtyOrdered=" + qtyOrdered +
+            '}';
+}
+
+// class Products2
+public void sell() {
+    this.qtyInStock -= this.qtyOrdered;
+    this.qtyOrdered = 0;
+}
+}
+
